<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidBookie</string>
    <string name="button_newest_global_text">All</string>
    <string name="button_newest_user_text">Mine</string>
    <string name="button_settings_text">Settings</string>
    <string name="field_new_bookmark_url_hint">URL</string>
    <string name="field_new_bookmark_title_hint">Title</string>
    <string name="button_new_bookmark_cancel_text">Cancel</string>
    <string name="button_new_bookmark_save_text">OK</string>
    <string name="button_new_bookmark_new_tag_text">Add Tag</string>
    <string name="button_new_bookmark_new_tag_dialog_title">Add Tag</string>
    <string name="button_new_bookmark_new_tag_dialog_text">Enter tag (no spaces)</string>
    <string name="button_new_bookmark_new_tag_dialog_ok_button_text">OK</string>
    <string name="button_new_bookmark_new_tag_dialog_cancel_button_text">Cancel</string>
    <string name="settings_username_dialog_title">Username</string>
    <string name="settings_username_dialog_message">"Enter your existing account`s username"</string>
    <string name="settings_apikey_dialog_title">API Key</string>
    <string name="settings_apikey_dialog_message">Enter the API for your existing account</string>
    <string name="settings_baseurl_dialog_title">Server</string>
    <string name="settings_baseurl_dialog_message">Enter the URL of the Bookie server (eg http://bmark.us)</string>
    <string name="settings_baseurl_defaultvalue">https://bmark.us</string>
    <string name="bookmark_detail_menu_title">BookMark Detail Menu</string>
    <string name="bookmark_detail_activity_title">Bookie BookMark Detail</string>
    <string name="bookmark_detail_activity_description_label">Description</string>
    <string name="bookmark_detail_activity_url_label">URL</string>
    <string name="bookmark_detail_activity_username_label">User</string>
    <string name="bookmark_detail_activity_stored_label">Added</string>
    <string name="bookmark_detail_activity_total_count_label">Total Clicks</string>
    <string name="bookmark_detail_activity_count_label">My Clicks</string>
    <string name="bookmark_detail_activity_tags_label">Tags</string>
</resources>