<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="426dp"
        android:layout_weight="0.97" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:gravity="right" >

        <Button
            android:id="@+id/newestGlobalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_newest_global_text" />

        <Button
            android:id="@+id/newestUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_newest_user_text" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_settings_text" />
    </LinearLayout>

</LinearLayout>